GNOME Bugzilla – Bug 663899
gxps_parse_error INVALID_CONTENT error has element and attribute switched
Last modified: 2011-11-12 08:28:06 UTC
Created attachment 201270 [details] [review] Fixed attribute_name and element_name being switched in gxps_parse_error When gxps_parse_error is called with error_type G_MARKUP_ERROR_INVALID_CONTENT, the GError message produced has the attribute_name and element_name switched. For example, this creates the following error message: Error rendering page /Documents/1/Pages/1.fpage: /Documents/1/Pages/1.fpage:4:55 invalid content in attribute 'Opacity' of element 'SolidColorBrush': abc
Correction: Without the patch, produces this incorrect error message: Error rendering page /Documents/1/Pages/1.fpage: /Documents/1/Pages/1.fpage:4:55 invalid content in attribute 'SolidColorBrush' of element 'Opacity': abc
Review of attachment 201270 [details] [review]: Now I understand why you switched attribute and element in previous patch :-P Thanks for the patch, I've just pushed it to git master.