Fixed attribute_name and element_name being switched in gxps_parse_error

When gxps_parse_error is called with error_type
G_MARKUP_ERROR_INVALID_CONTENT, the GError message produced has the
attribute_name and element_name switched.

https://bugzilla.gnome.org/show_bug.cgi?id=663899